recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:5: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameters angle, length, increment.
    spiral(steps+1)
          ^